--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="alarm_manager">Alarm Manager</string>
     <string name="work_manager">Work manager</string>
     <string name="job_intent_service">Job intent service</string>
-    <string name="job_dispatcher">Job dispatcher</string>
+    <string name="job_scheduler">Job scheduler</string>
     <string name="intent_service">intent service</string>
     <string name="foreground_service">Foreground service</string>
 </resources>
