--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="stop">\" Stop\"</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="read_contacts">Read Contacts</string>
+    <string name="check_phone_charge_level">Узнать уровень зарядки телефона</string>
 </resources>
