--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="InvalidForm">InvalidForm</string>
     <string name="tel">tel:</string>
     <string name="add_contacts">add contacts</string>
+    <string name="percent">%</string>
 </resources>
