--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,11 @@
     <string name="tel">tel:</string>
     <string name="add_contacts">add contacts</string>
     <string name="percent">%</string>
+    <string name="add_avatar">Add avatar</string>
+    <string name="enter_phone_number">Enter phone number</string>
+    <string name="picture_showing_battery_level">Picture showing battery level</string>
+    <string name="get_contact_list_from_phonebook">Get contact list from phoneBook</string>
+    <string name="start_and_pause_button">Start and pause button</string>
+    <string name="phone_call_button">Phone call button</string>
+    <string name="reset_button">Reset button</string>
 </resources>
